--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.28.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@mdx-js/react": "^3.0.0",
@@ -23,7 +25,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "rimraf": "^5.0.5",
     "serve": "^14.2.1",
-    "vite": "^5.0.12",
+    "vite": "^5.4.11",
     "vite-pages-theme-doc": "^5.0.0",
     "vite-plugin-react-pages": "^5.0.0"
   }
